test/reader/tglyph/error/table/different-columns.tglyph
| data11 | data12 |
| data21 | data22 |
| data31 | data32 |

| data11 | data12 |
| ------ | ------ |
| data21 | data22 | data 23 |
| data31 | data32 |
